fix(presentation): cut off due to collection properties

--- a/apps/client/src/widgets/collections/presentation/index.css
+++ b/apps/client/src/widgets/collections/presentation/index.css
@@ -1,3 +1,9 @@
+.presentation-view {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .presentation-container {
     width: 100%;
     height: 100%;
